# darwincore

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.sh
.claude/: settings.local.json
docs/: network_architecture.md
include/darwincore/foundation/algorithm/: BloomFilter.h  Hash.h  Search.h  Sort.h
include/darwincore/foundation/command/: ShellExecutor.h
include/darwincore/foundation/common/: Common.h
include/darwincore/foundation/container/: BitSet.h  CircularBuffer.h  ConcurrentMap.h  LRUCache.h  ObjectPool.h  RingQueue.h
include/darwincore/foundation/date/: Calendar.h  DateTime.h  Duration.h  TimeZone.h  Timestamp.h
include/darwincore/foundation/file/: DirectoryIterator.h  FileHandle.h  FileLock.h  FileManager.h  FilePath.h  FileWatcher.h  MMap.h  PathUtils.h  SecureDelete.h  TemporaryFile.h
include/darwincore/foundation/logger/: AsyncLogger.h  LogFormatter.h  LogRotate.h  LogSink.h  Logger.h
include/darwincore/foundation/memory/: MemoryAllocator.h
include/darwincore/foundation/process/: ProcessTree.h  ProcessUtil.h  SharedMemory.h  Singleton.h
include/darwincore/foundation/sqlite3/: SQLite3DB.h  sqlite3.h
include/darwincore/foundation/string/: Encoding.h  Format.h  Regex.h  StringBuilder.h  StringPool.h  StringUtils.h
include/darwincore/foundation/thread/: AsyncQueue.h  Dispatch.h  Lock.h  RunLoop.h
include/darwincore/foundation/throttle/: Throttle.h
include/darwincore/foundation/timer/: Timer.h
include/darwincore/foundation/uuid/: UUID.h
include/darwincore/network/: client.h  configuration.h  event.h  logger.h  protocol.h  server.h
src/: CMakeLists.txt
src/darwincore/: CMakeLists.txt
src/darwincore/foundation/: CMakeLists.txt
src/darwincore/foundation/algorithm/: BloomFilter.cpp  Hash.cpp
src/darwincore/foundation/command/: ShellExecutor.cpp
src/darwincore/foundation/common/: Common.cpp
src/darwincore/foundation/container/: BitSet.cpp
src/darwincore/foundation/date/: Calendar.cpp  DateTime.cpp  Duration.cpp  TimeZone.cpp  Timestamp.cpp
src/darwincore/foundation/file/: DirectoryIterator.cpp  FileHandle.cpp  FileLock.cpp  FileManager.cpp  FilePath.cpp  FileWatcher.cpp  MMap.cpp  PathUtils.cpp  SecureDelete.cpp  TemporaryFile.cpp
src/darwincore/foundation/logger/: AsyncLogger.cpp  LogFormatter.cpp  LogRotate.cpp  LogSink.cpp  Logger.cpp
src/darwincore/foundation/memory/: MemoryAllocator.cpp
src/darwincore/foundation/process/: ProcessTree.cpp  ProcessUtil.cpp  SharedMemory.cpp  Singleton.cpp
src/darwincore/foundation/sqlite3/: SQLite3DB.cpp
src/darwincore/foundation/string/: Encoding.cpp  Regex.cpp  StringBuilder.cpp  StringPool.cpp  StringUtils.cpp
src/darwincore/foundation/thread/: AsyncQueue.cpp  Dispatch.cpp  Lock.cpp  RunLoop.cpp
src/darwincore/foundation/throttle/: Throttle.cpp
src/darwincore/foundation/timer/: Timer.cpp
src/darwincore/foundation/uuid/: UUID.cpp
src/darwincore/network/: CMakeLists.txt  acceptor.cpp  acceptor.h  client.cpp  client_reactor.cpp  client_reactor.h  concurrent_queue.h  connection_id_generator.cpp  connection_id_generator.h  io_monitor.cpp  io_monitor.h  protocol.cpp  reactor.cpp  reactor.h  reactor_connection.h  send_buffer.cpp  send_buffer.h  server.cpp  socket_helper.cpp  socket_helper.h  worker_pool.cpp  worker_pool.h
test/: CMakeLists.txt  server_client_test.cpp  test_client_setonmessage.cpp
